# package_manager

./: .gitignore  Makefile  README.md  pyproject.toml
src/: cli.py  command_runner.py  errors.py  manager.py
tests/: test_scenario.py
