[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Diego Gonzalez <diego.glez.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.950"
flakeheaven = "^0.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
python_files = ["test_*.py"]

[mypy]
python_version = 3.9
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
disallow_any_generics = true

[tool.flakeheaven]
exclude = [".git"]
format = "grouped"
max_line_length = 90
show_source = true
